# audio_api

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci-pipeline.yml
alembic/: alembic.ini  env.py
alembic/versions/: 023cb74d5767_create_radio_program_table.py  740af7d90bcc_add_radio_programs_table.py  740af7d90bcc_create_radio_programs_table.py
cli/: manage.py
config/: api.env  db.env
docker/: Dockerfile  docker-compose.yml
docker/aws/: buckets.sh  dynamo_tables.sh
docker/config/: api.env
scripts/: start_develop.sh  test.sh
src/audio_api/: app.py  run_api_local.py  settings.py  version.py
src/audio_api/api/: __init__.py  deps.py  routers.py  settings.py
src/audio_api/api/endpoints/: radio_programs.py
src/audio_api/api/schemas/: __init__.py  api_version.py  radio_program.py
src/audio_api/api/v1/: routers.py
src/audio_api/aws/: aws_service.py  base.py  settings.py
src/audio_api/aws/dynamodb/: __init__.py  base_repository.py  exceptions.py  radio_programs.py  tables.py
src/audio_api/aws/s3/: buckets.py  exceptions.py  program_file_persistence.py  s3_connector.py
src/audio_api/aws/s3/models/: __init__.py  (+2 more)
src/audio_api/cli/: manage.py
src/audio_api/db/: alembic_models.py  base_class.py  session.py
src/audio_api/db/models/: __init__.py  alembic_models.py  base_db_model.py  radio_program.py
src/audio_api/db/repositories/: base_repository.py  radio_program.py
src/audio_api/domain/: exceptions.py  radio_programs.py  radio_programs_dynamo.py
src/audio_api/domain/models/: __init__.py  radio_program.py
src/audio_api/logger/: formatter.py  logger.py  settings.py
src/audio_api/logging/: logger.py
src/audio_api/persistence/: settings.py
src/audio_api/persistence/models/: alembic_models.py  radio_program.py
src/audio_api/persistence/repositories/: __init__.py  base_dynamodb_repository.py  base_repository.py  radio_program.py  radio_program_dynamodb.py
src/audio_api/s3/: program_file_persistence.py  s3_connector.py
src/audio_api/schemas/: __init__.py  api.py  program.py  radio_program.py  radio_program_dynamo.py  s3_base_schema.py  utils.py
tests/: conftest.py  run_api_local.py  test_base.py  test_utils.py
tests/api/: test_base.py  test_utils.py
tests/api/endpoints/: test_radio_programs_endpoints.py
tests/aws/: conftest.py
tests/aws/dynamodb/: conftest.py  test_radio_programs_repository.py
tests/aws/s3/: test_radio_program_files_repository.py
tests/aws/testcontainers/: localstack.py
tests/domain/: conftest.py  test_radio_programs_domain.py
tests/integration/: test_radio_programs.py
(+16 files in other folders)
