[tool.poetry]
name = "audio-api"
version = "0.1.0"
description = "Audio API built with FastAPI, PostgreSQL and S3 integration"
authors = ["Damian Bourdin <damian.bourdin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
fastapi-utils = "^0.2.1"
boto3 = "^1.28.63"
botocore = "^1.31.63"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pytest-cov = "^4.1.0"
httpx = "^0.25.0"
typer = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
manage = 'cli.manage:app'

[tool.isort]
profile = "black"
multi_line_output = 3
known_first_party = ["audio_api"]
default_section="THIRDPARTY"
